# mcpy_mapper

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  tox.toml
src/mcpy_mapper/: classes.py  local_crawler.py  main.py  organize.py
tests/: test_fixing_invalid_multiline_string_in_toml.py  test_loading_toml.py
