[project]
name = "mcpy_mapper"
version = "0.1.0"
description = "A suite of python tools for mapping out, and preparing bundles of, modloaders & mods for Java Minecraft worlds."
authors = [
    {name = "Ethan Timm"}
]
license = {text = "TBD"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amulet-nbt (>=2.0,<2.1)",
    "mutf8 (>=1.0.6)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "~=8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
